# tmw-pandas

./: README.md  pyproject.toml
data/: clientes.csv
dia01/: 02_series.py  03_series_index.py  04_dataframes.py
dia02/: 01_csv.py  02_clipboard.py  03_html.py  04_dataframes.py  05_colunas.py
dia03/: 01_filtro.py  03_filtros_view.py
dia04/: 01_novas_colunas.py  02_sort.py
dia05/: 01_conv_tipo.py  02_na.py
dia06/: 01_apply.py  02_ufs.py
dia07/: 01_summary.py  02_group.py  03_custom_group.py
dia08/: 01_merge.py
exercicios/06/: 04.py
exercicios/case_homicidios/: 01_case.py  01cs.py
