[tool.poetry]
name = "tmw-pandas"
version = "0.1.0"
description = ""
authors = ["Diego Morais <dolivmorais@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.2"
pyarrow = "^21.0.0"
openpyxl = "^3.1.5"
lxml = "^6.0.1"
requests = "^2.32.5"
numpy = "^2.3.2"
matplotlib = "^3.10.5"
shell = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
